# btd6-teams

./: .gitignore  .helmignore  .tool-versions  Chart.yaml  Dockerfile  Makefile  README.md  btd6_teams.opam  btd6teams.nimble  dune-project  estimate_gold.nim  main.py  package-lock.json  package.json  requirements.txt  values.yaml
.github/workflows/: build.yml  build_publish.yml
lib/: dune
src/: app.html  definitions.nim  functools.nim  main  main.nim  models.nim  money.nim  view.nim
src/lib/: definitions.ts  index.ts  models.ts
src/routes/: +page.svelte
templates/: configmap.yml  deployment.yaml  ingress.yaml
test/: dune
